# FSDomainRust

./: Cargo.toml  README.md
src/: archivo.txt  main.rs
